# sample-openai-on-aws

./: .gitignore  CODE_REVIEW_RESPONSE.md  README.md
guidance-for-codex-on-amazon-bedrock/source/: CUSTOM_JWT_MIDDLEWARE_PLAN.md  IMPLEMENTATION_SUMMARY.md  LITELLM_IMAGE_BUILD.md  MIGRATION_POETRY_TO_UV.md  MULTI_ARCH_BUILD.md  NETWORK_ACCESS_PATTERNS.md  OIDC_JWT_AUTHENTICATION.md  README.md  SELF_SERVICE_KEY_ENDPOINT.md  check-ecs-status.sh  cleanup-codex-openai.sh  pyproject.toml  refresh-codex-key.sh
guidance-for-codex-on-amazon-bedrock/source/codex_with_bedrock/: __init__.py  config.py  migration.py  models.py  validators.py
guidance-for-codex-on-amazon-bedrock/source/codex_with_bedrock/cli/: __init__.py
guidance-for-codex-on-amazon-bedrock/source/codex_with_bedrock/cli/commands/: __init__.py  builds.py  cleanup.py  context.py  deploy.py  destroy.py  distribute.py  init.py  package.py  quota.py  (+2 more)
guidance-for-codex-on-amazon-bedrock/source/credential_provider/: __main__.py
guidance-for-codex-on-amazon-bedrock/source/cxwb/: __init__.py  aws.py  cli.py  paths.py  profile.py
guidance-for-codex-on-amazon-bedrock/source/cxwb/commands/: build.py  build_jwt.py  deploy.py  destroy.py  distribute.py  init.py  status.py
guidance-for-codex-on-amazon-bedrock/source/otel_helper/: __init__.py  __main__.py  otel-helper.sh
guidance-for-codex-on-amazon-bedrock/source/tests/: README.md  __init__.py  docker-compose.test.yml  test_confidential_client.py  test_config.py  test_config_models.py  test_models.py  test_silent_refresh.py  test_smoke.py  test_source_regions.py
(+94 files in other folders)
