[tool.poetry]
name = "cxwb"
version = "0.1.0"
description = "Guided CLI for deploying Codex on Amazon Bedrock (IAM Identity Center or LiteLLM Gateway)."
authors = ["AWS Solutions Library"]
readme = "README.md"
packages = [{ include = "cxwb" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = "^8.1"
questionary = "^2.0"
boto3 = "^1.34"

[tool.poetry.scripts]
cxwb = "cxwb.cli:main"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"
