[project]
name = "cxwb"
version = "0.1.0"
description = "Guided CLI for deploying Codex on Amazon Bedrock (IAM Identity Center or LiteLLM Gateway)."
authors = [{ name = "AWS Solutions Library" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "click>=8.1,<9.0",
    "questionary>=2.0,<3.0",
    "boto3>=1.34,<2.0",
]

[project.scripts]
cxwb = "cxwb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cxwb"]
